refactor(kubernetes): ♻️ 重构Kubernetes服务处理策略
- 在KubernetesServiceRoleStrategy接口中移除getKubernetesNamespace方法，改为通过命令参数传入namespace
- 新增TypeRefs枚举类用于统一类型引用管理，替代原有的TypeReference用法
- 重构CacheOperateUtils，增加getGeneric方法支持泛型缓存获取
- KubernetesYamlDeploymentHandler中namespace参数改为从命令传入而非从集群ID查询
- 所有服务策略实现类适配getConfig方法签名变更
- 统一处理各类服务在Kubernetes环境下的配置生成逻辑

优化了类型安全性，减少了重复代码，避免直接通过集群ID查询namespace带来的耦合

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>